@@ -188,6 +188,12 @@ int SCIPcolGetNStrongbranchs(
    SCIP_COL*             col                 /**< LP column */
    );
 
+/** gets the age of a column, i.e., the total number of successive times a column was in the LP and was 0.0 in the solution */
+SCIP_EXPORT
+int SCIPcolGetAge(
+   SCIP_COL*             col                 /**< LP column */
+   );
+
 /** gets opposite bound type of given bound type */
 SCIP_EXPORT
 SCIP_BOUNDTYPE SCIPboundtypeOpposite(
@@ -221,6 +227,7 @@ SCIP_BOUNDTYPE SCIPboundtypeOpposite(
 #define SCIPcolGetVals(col)             (col)->vals
 #define SCIPcolGetStrongbranchNode(col) (col)->sbnode
 #define SCIPcolGetNStrongbranchs(col)   (col)->nsbcalls
+#define SCIPcolGetAge(col)              (col)->age
 #define SCIPboundtypeOpposite(boundtype) \
    ((boundtype) == SCIP_BOUNDTYPE_LOWER ? SCIP_BOUNDTYPE_UPPER : SCIP_BOUNDTYPE_LOWER)
 
